samples/_failures_safe/1761085530_be73b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0f99539.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_e0f99539.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
